--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^5.13.20",
     "nodemon": "^3.0.1",
     "router": "^1.3.8"
